tests/fail/elaboration/numeric-literal/ambiguous.snap
stdout = ''
stderr = '''
error: ambiguous numeric literal
  ┌─ tests/fail/elaboration/numeric-literal/ambiguous.fathom:3:1
  │
3 │ 34
  │ ^^ type annotations needed

'''
